--- a/css/webstyle.css
+++ b/css/webstyle.css
@@ -134,7 +134,7 @@ nav ul li {
 #banner {
     top: 0;
     position: relative;
-    background: url(../images/banner.jpg) no-repeat;
+    background: url(./banner.jpg) no-repeat;
     background-position: center;
     background-size: cover;
     text-align: center;
